# SkyHockey

./: .gitignore  .gitmodules  .travis.yml  README.md
.github/workflows/: ci.yml
Engine/: CMakeLists.txt  conanfile.py  conanfile.txt
Engine/lib/: CMakeLists.txt
Engine/lib/glfw-3.2.1/: CMakeLists.txt
Engine/res/: BlurAliasing.frag  BlurHorizontal.frag  BlurMotion.frag  BlurUnidirectional.frag  BlurVertical.frag  DeferredPrepare.frag  DeferredPrepare.vert  DeferredRender.frag  Depth.frag  Depth.vert  DepthRTT.frag  DepthRTT.vert  FXAA.vert  FXAA_0.frag  FXAA_1.frag  FXAA_2.frag  FXAA_3.frag  FXAA_4.frag  Forward.frag  Forward.vert  MotionBlur.frag  Passthrough.vert  PerfOverlay.frag  Quad.vert  ShadowMap.frag  ShadowMap.vert  ShadowMapping.frag  ShadowMapping.vert  SimpleTexture.frag  Space.frag  geometry.mtl
Engine/src/: Config.cpp  Config.h  Main.cpp
Engine/src/game/: Camera.cpp  Camera.h  Game.cpp  Game.h  GameEntity.cpp  GameEntity.h  Puck.cpp  Puck.h  Striker.cpp  Striker.h
Engine/src/renderer/: ICamera.h  RenderEntity.cpp  RenderEntity.h  Renderer.cpp  Renderer.h  VisualDebug.cpp  VisualDebug.h
Engine/src/renderer/geometry/: ObjLoader.cpp  ObjLoader.h  Shape.cpp  Shape.h
Engine/src/renderer/material/: Framebuffer.cpp  Framebuffer.h  IFramebuffer.h  Light.h  Material.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureDDS.cpp  TextureDDS.h  TexturePNG.cpp  TexturePNG.h
Engine/src/support/: Animator.cpp  Animator.h  FadeAnimation.cpp  FadeAnimation.h  Formatter.h  Logger.cpp  Logger.h  Oculus.cpp  Oculus.h  OculusEye.cpp  OculusEye.h  Window.cpp  Window.h
Models/: geometry.blend  score_board.afdesign  striker.afdesign  table.afdesign
Resources/: geometry.blend
